--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
   </nav>
 
   <div id="main" class="container active">
-    <h2>Welcome to Pixelmark PLC</h2>
-    <p>Pixelmark is a leading company on Roblox offering a unique shopping and roleplay experience. Join us as we continue to grow and offer amazing services to our community!</p>
+    <h2>Welcome to PixelMart – Your Ultimate Roblox Shopping Destination!</h2>
+    <p>Step into the world of PixelMart, where virtual shopping meets real fun! From fresh groceries to stylish home items, we’ve got everything your Roblox character needs – all in one place. Join thousands of happy shoppers and experience the future of in-game retail, Pixel-style.</p>
+    <p>🛒 Explore. Save. Play.</p>
   </div>
 
   <div id="qa" class="container">
