--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pixelmark PLC</title>
+  <title>pixelmark PLC</title>
   <style>
     :root {
       --main-color: #5a3d2b;
@@ -95,7 +95,7 @@
 <body>
   <button class="dark-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
   <header>
-    <h1>Pixelmark PLC</h1>
+    <h1>pixelmark PLC</h1>
     <p>Official Website</p>
   </header>
   <nav>
@@ -106,7 +106,7 @@
   </nav>
 
   <div id="main" class="container active">
-    <h2>Welcome to PixelMart – Your Ultimate Roblox Shopping Destination!</h2>
+    <h2>Welcome to pixelmark – Your Ultimate Roblox Shopping Destination!</h2>
     <p>Step into the world of PixelMart, where virtual shopping meets real fun! From fresh groceries to stylish home items, we’ve got everything your Roblox character needs – all in one place. Join thousands of happy shoppers and experience the future of in-game retail, Pixel-style.</p>
     <p>🛒 Explore. Save. Play.</p>
   </div>
