--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <a onclick="showPage('about')">About</a>
       <a onclick="showPage('features')">Features</a>
       <a onclick="showPage('links')">Links</a>
+      <a onclick="showPage('Staff')">Staff</a>
     </nav>
   </header>
 
@@ -132,11 +133,53 @@
   <section id="links" class="page">
     <h3>Join the Pixelmark Experience</h3>
     <div class="links" style="max-width:500px; margin:auto;">
-      <a href="https://www.roblox.com/communities/16031525/Pixelmark-PLC#!/about" target="_blank">🌐 Roblox Group</a>
-      <a href="https://www.roblox.com/games/18361728089/Pixelmark-V3" target="_blank">🎮 Play the Game</a>
+      <a href="https://www.roblox.com/communities/16031525/Pixelmark-PLC">🌐 Roblox Group</a>
+      <a href="https://www.roblox.com/games/18361728089/Pixelmark-V3">🎮 Play the Game</a>
       <a href="https://discord.gg/rvT2tEyDk7" target="_blank">💬 Join Our Discord</a>
     </div>
   </section>
+
+  <!-- Staff -->
+  <section id="staff" class="page">
+    <h2>Meet Our Staff</h2>
+    <div class="staff-container">
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-8EEAFBDA04E35AAD211D3C02600954C4-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 1">
+        <h3>DamianS201209</h3>
+        <p>Chief Executive Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-30A797B751E3FAC721E5DAE1EAB8D594-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 2">
+        <h3>Drsanderandre</h3>
+        <p>Deputy Cheif Executive Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-65CD725D31177DC7F9534504738F9BB3-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 3">
+        <h3>Jake</h3>
+        <p>Deputy Cheif Executive Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-D5A6D60D8CF0865EDA9D736B4F327EF2-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 4">
+        <h3>sagaTa6</h3>
+        <p>Deputy Cheif Executive Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-EB1C39502064E11822CA35DF873FD4E2-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 5">
+        <h3>Emdelarclay</h3>
+        <p>Chief Operations Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-FA7707788748ACAFAC6858B9B13BB436-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 6">
+        <h3>STDW09</h3>
+        <p>Chief Financial Officer</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-0325EA00DBD85A9621CEFDD17ABD7B24-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 7">
+        <h3>Jacob_XD</h3>
+        <p>Chief Staffing Officer</p>
+    </div>
+  </section>
+
 
   <footer>
     <p>&copy; 2025 Pixelmark PLC | Roblox Shopping Group</p>
