--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </section>
 
   <!-- Staff -->
-  <section id="staff" class="page">
+  <section id="staff">
     <h2>Meet Our Staff</h2>
     <div class="staff-container">
       <div class="staff-card">
@@ -177,6 +177,8 @@
         <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-0325EA00DBD85A9621CEFDD17ABD7B24-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 7">
         <h3>Jacob_XD</h3>
         <p>Chief Staffing Officer</p>
+
+    <a class="btn" onclick="showPage('home')">Back Home</a>
     </div>
   </section>
 
