--- a/index.html
+++ b/index.html
@@ -115,6 +115,56 @@
       color: #555;
     }
   </style>
+
+<style>
+  :root {
+    --bg: #f4f4f4;
+    --text: #333;
+    --card: #fff;
+    --accent: #6b4226;
+  }
+  body.dark {
+    --bg: #1a1a1a;
+    --text: #eee;
+    --card: #2a2a2a;
+    --accent: #d4a373;
+  }
+  body {
+    background: var(--bg);
+    color: var(--text);
+    transition: background 0.3s, color 0.3s;
+  }
+  #darkmode-btn {
+    background: #fff;
+    color: var(--accent);
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background 0.3s, color 0.3s;
+  }
+  #darkmode-btn:hover {
+    background: #ddd;
+  }
+</style>
+
+<!-- DARK MODE BUTTON -->
+<button id="darkmode-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+
+<!-- DARK MODE SCRIPT -->
+<script>
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark');
+    const btn = document.getElementById("darkmode-btn");
+    if (document.body.classList.contains("dark")) {
+      btn.textContent = "☀️ Light Mode";
+    } else {
+      btn.textContent = "🌙 Dark Mode";
+    }
+  }
+</script>
+  
 </head>
 <body>
   <header>
